# training_recipe

./: Dockerfile  docker-compose.yml  home.py  pyproject.toml
pages/: recipe.py  simple_page.py
