[tool.poetry]
name = "llm-app"
version = "0.1.0"
description = ""
authors = ["yusuke <ritchie.deep.purple@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.25.0"
openai = "0.27.8"
pydantic = "^2.7.1"
stability-sdk = "0.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
